// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a SecretItemDatum component for each Secret key 1`] = `
<Fragment>
  <td
    className="col-3"
  >
    foo
  </td>
  <td
    className="col-2 SecretType"
  >
    Opaque
  </td>
  <td
    className="col-7"
  >
    <SecretItemDatum
      key="foo/foo"
      name="foo"
      value="YmFy"
    />
    <SecretItemDatum
      key="foo/foo2"
      name="foo2"
      value="YmFyMg=="
    />
  </td>
</Fragment>
`;

exports[`when there is an empty Secret displays a message 1`] = `
<Fragment>
  <td
    className="col-3"
  >
    foo
  </td>
  <td
    className="col-2 SecretType"
  >
    Opaque
  </td>
  <td
    className="col-7"
  >
    <span>
      This Secret is empty
    </span>
  </td>
</Fragment>
`;
